primera Section completada

--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <meta name="keywords" content="chile, turismo, viajes, naturaleza, paisaje">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Viajes Chile</title>
+    <script src="https://kit.fontawesome.com/4fe22bf23c.js" crossorigin="anonymous"></script>
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
                 <img src="assets\img\viajes.svg" alt="logo de viajes chile" width="20px">
-                        <a class="navbar-brand" href="#">Viajes Chile</a>
+                        <a class="navbar-brand text-white" href="#">Viajes Chile</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio</a>
+                        <a class="nav-link text-white" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes somos</a>
+                        <a class="nav-link text-white" href="#">Quienes somos</a>
                     </li>
-                    <a class="nav-link" href="#">Destacados</a>
+                    <a class="nav-link text-white" href="#">Destacados</a>
                     </li>
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link text-white" href="#">Contacto</a>
                     </li>
                     </ul>
                 </div>
@@ -59,12 +60,46 @@
               </div>
     </header>
 
+    <section class="bg-black text-white">
+
+    
+    <div class="container">
+        <h2 class="text-center">¿QUIENES SOMOS?</h2>
+        <hr>
+        <div class="row">
+          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+            <div class="bg-info">
+                <i class="fa-solid fa-plane"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consectetur ab dolores ratione? Quae, numquam odit. Repellat itaque sapiente, ducimus sed ullam dicta totam similique laboriosam recusandae ratione veritatis quae.
+            Asperiores enim fuga incidunt culpa magni voluptatibus, recusandae, temporibus unde voluptates deserunt sint reprehenderit labore. Nulla consectetur quas quis iste maxime perferendis, delectus voluptatum nostrum quasi maiores cum. Corrupti, porro?</p>
+          </div>
+          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iusto dignissimos totam eum beatae facere odio veritatis dicta ad esse, obcaecati, eos praesentium culpa officia cum inventore quas pariatur. Rem.
+            Sunt sequi illum ullam exercitationem in neque sit eius expedita eligendi! Mollitia, beatae delectus illum maxime, placeat tempore repellendus unde autem soluta dolorum odit sequi, dolores porro! Iure, reiciendis facilis?</p>
+            <div class="bg-info">
+                <i class="fa-solid fa-mountain"></i>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+            <div class="bg-info">
+                <i class="fa-solid fa-route"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consectetur ab dolores ratione? Quae, numquam odit. Repellat itaque sapiente, ducimus sed ullam dicta totam similique laboriosam recusandae ratione veritatis quae.
+            Asperiores enim fuga incidunt culpa magni voluptatibus, recusandae, temporibus unde voluptates deserunt sint reprehenderit labore. Nulla consectetur quas quis iste maxime perferendis, delectus voluptatum nostrum quasi maiores cum. Corrupti, porro?</p>
+          </div>
+    </div>
+
+
+    </div>
+
+
+
+
+    </section>
     <section>
-    <h2>¿QUIENES SOMOS?</h2>
-
-
-
-
+        <div class="container">
+            <h2 class="text-center">DESTACADOS</h2>
     </section>
 
 
