--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/4fe22bf23c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav class="navbar navbar-expand-lg bg-info fixed-top">
             <div class="container">
                 <img src="assets\img\viajes.svg" alt="logo de viajes chile" width="20px">
                         <a class="navbar-brand text-white" href="#">Viajes Chile</a>
@@ -23,11 +23,13 @@
                         <a class="nav-link text-white" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Quienes somos</a>
+                        <a class="nav-link text-white" href="#quienessomos">Quienes somos</a>
                     </li>
-                    <a class="nav-link text-white" href="#">Destacados</a>
+                    <li>
+                    <a class="nav-link text-white" href="#destacados">Destacados</a>
                     </li>
-                    <a class="nav-link text-white" href="#">Contacto</a>
+                    <li>
+                    <a class="nav-link text-white" href="#contacto">Contacto</a>
                     </li>
                     </ul>
                 </div>
@@ -39,75 +41,174 @@
         <header>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+                <div class="carousel-item active">
                     <img src="assets\img\carousel1.jpg" class="d-block w-100" alt="imagen llamas">
-                  </div>
-                  <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                     <img src="assets\img\carousel2.jpg" class="d-block w-100" alt="imagen moai">
-                  </div>
-                  <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                     <img src="assets\img\carousel3.jpg" class="d-block w-100" alt="imagen pinguinos">
-                  </div>
+                </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
     </header>
 
     <section class="bg-black text-white">
 
     
-    <div class="container">
+    <div class="container py-4">
+        <div id="quienessomos">
         <h2 class="text-center">¿QUIENES SOMOS?</h2>
         <hr>
         <div class="row">
-          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+        <div class="col-md-4 col-lg-4 col-xl-4 text-center">
             <div class="bg-info">
                 <i class="fa-solid fa-plane"></i>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consectetur ab dolores ratione? Quae, numquam odit. Repellat itaque sapiente, ducimus sed ullam dicta totam similique laboriosam recusandae ratione veritatis quae.
             Asperiores enim fuga incidunt culpa magni voluptatibus, recusandae, temporibus unde voluptates deserunt sint reprehenderit labore. Nulla consectetur quas quis iste maxime perferendis, delectus voluptatum nostrum quasi maiores cum. Corrupti, porro?</p>
-          </div>
-          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4 text-center">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi iusto dignissimos totam eum beatae facere odio veritatis dicta ad esse, obcaecati, eos praesentium culpa officia cum inventore quas pariatur. Rem.
             Sunt sequi illum ullam exercitationem in neque sit eius expedita eligendi! Mollitia, beatae delectus illum maxime, placeat tempore repellendus unde autem soluta dolorum odit sequi, dolores porro! Iure, reiciendis facilis?</p>
             <div class="bg-info">
                 <i class="fa-solid fa-mountain"></i>
             </div>
-          </div>
-          <div class="col-md-4 col-lg-4 col-xl-4 text-center">
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4 text-center">
             <div class="bg-info">
                 <i class="fa-solid fa-route"></i>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consectetur ab dolores ratione? Quae, numquam odit. Repellat itaque sapiente, ducimus sed ullam dicta totam similique laboriosam recusandae ratione veritatis quae.
             Asperiores enim fuga incidunt culpa magni voluptatibus, recusandae, temporibus unde voluptates deserunt sint reprehenderit labore. Nulla consectetur quas quis iste maxime perferendis, delectus voluptatum nostrum quasi maiores cum. Corrupti, porro?</p>
-          </div>
+        </div>
     </div>
-
-
+        </div>
     </div>
-
-
-
 
     </section>
-    <section>
-        <div class="container">
+
+    <section class="bg-black text-white">
+
+        <div class="container py-4">
+            <div id="destacados">
             <h2 class="text-center">DESTACADOS</h2>
+            <hr>
+            <div></div>
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-xl-3">
+                    <div class="card-group">
+                        <div class="card">
+                            <img src="assets\img\card1.jpg" class="card-img-top" alt="foto lago">
+                                <div class="card-body bg-info text-white">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt accusantium reprehenderit quam et quas corrupti adipisci, laudantium dolor quasi at nulla laboriosam magni esse libero voluptatibus distinctio sint deserunt. Doloremque..</p>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            <div class="col-md-3 col-lg-3 col-xl-3">
+                    <div class="card">
+                    <img src="assets\img\card2.jpg" class="card-img-top" alt="foto montaña">
+                        <div class="card-body bg-info text-white">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam modi enim dignissimos. Maxime, cumque quibusdam dolore soluta explicabo quisquam nesciunt ex vel aliquid autem similique? Rerum saepe qui aut quasi!.</p>
+                        </div>
+                    </div>
+            </div>
+            <div class="col-md-3 col-lg-3 col-xl-3">
+                        <div class="card">
+                        <img src="assets\img\card3.jpg" class="card-img-top" alt="foto rio">
+                            <div class="card-body bg-info text-white">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti expedita quisquam minima optio alias nemo exercitationem debitis earum inventore. Aspernatur illum impedit, asperiores maiores cupiditate perferendis odio tempora sunt unde.</p>
+                            </div>
+                        </div>
+            </div>
+            <div class="col-md-3 col-lg-3 col-xl-3">
+                    <div class="card">
+                    <img src="assets\img\card4.jpg" class="card-img-top" alt="foto bosque">
+                        <div class="card-body bg-info text-white">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ipsum tempore accusamus excepturi. Ut earum rem, cumque aspernatur provident minima, nemo veniam laborum iure delectus tempore dolor. Rerum, assumenda repellat.</p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+                </div>
+        </div>
     </section>
 
+    <section class="bg-black text-white">
+        <div class="container py-4">
+            <div id="contacto">
+            <h2 class="text-center">CONTACTO</h2>
+            <hr>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            <form>
+                <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Asunto</label>
+                <input type="text" class="form-control" id="Asunto">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+        </div>  
+
+
+
+    </section>
+
+    <footer>
+        <div class="bg-info text-white">
+            <div class="container">
+                <h2 class="text-align">VIAJES CHILE</h2> 
+
+.
+        <a class="btn btn-outline-light btn-floating m-1 col-md-1 col-lg-1 col-xl-1" href="https//www.facebook.com" role="button"><i class="fab fa-facebook-f"></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="twitter.com" role="button"><i class="fab fa-twitter"></i></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="google.cl" role="button"><i class="fab fa-google"></i></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="www.instagram.com" role="button"><i class="fab fa-instagram"></i></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="linkedin.com" role="button"><i class="fab fa-linkedin-in"></i></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="github.com" role="button"><i class="fab fa-github"></i></a>
+    <!-- Section: Social media -->
+                </div>
+            </div>
+  <!-- Grid container -->
+
+
+        
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
 </body>
 </html>
